src/styles/Search.css
.ReactTags__tag {
  padding: 5px 10px 5px 10px;
  margin: 5px;
  border-radius: 5px;
  border: 1px solid #ddd;
  background: #eee;
  display: inline-block;
  font-size: 1em;
}

.ReactTags__tags {
  margin-left: 50px;
  margin-right: 50px;
  margin-top: 25px;
}

.ReactTags__remove {
  margin-left: 8px;
  color: #aaa;
}

.ReactTags__remove:hover {
  color: #555;
  cursor: pointer;
}

.ReactTags__tagInput {
  display: grid;
  /* min-width: 35%; */
}
.ReactTags__tagInputField {
  margin-top: 10px;
  padding: 10px;
  /* height: 1em; */
  font-size: 1em;
  font-family: "Poppins", sans-serif;
  border: 1px solid #ddd;
  text-align: center;
}

.ReactTags__tagInputField:focus {
  outline: none;
}

.blend-button {
  width: 100px;
  height: 30px;
  border-radius: 5px;
  margin-top: 20px;
  font-family: "Poppins", sans-serif;
  font-size: 0.9em;
}

/* Styles for suggestions */
div.ReactTags__suggestions {
  display: grid;
  grid-template-columns: 1fr;
}
div.ReactTags__suggestions ul {
  grid-column: 1 / -1;
}

div.ReactTags__suggestions ul {
  list-style-type: none;
  padding-left: 0px;
  margin: 0px;
  margin-left: 1px;
  margin-right: 1px;
  box-shadow: 0.05em 0.01em 0.5em rgba(0, 0, 0, 0.2);
  background: white;
  /* width: 200px; */
}
div.ReactTags__suggestions li {
  border-bottom: 1px solid #ddd;
  padding: 5px 10px;
  margin: 0;
}
div.ReactTags__suggestions li mark {
  text-decoration: underline;
  background: none;
  font-weight: 600;
}
div.ReactTags__suggestions ul li.ReactTags__activeSuggestion {
  background: #b7cfe0;
  cursor: pointer;
}

